--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+quarkus.datasource.db-kind=h2
+quarkus.datasource.username=sa
+quarkus.datasource.password=password
+quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
+
 # dev
 %dev.quarkus.datasource.db-kind=h2
 %dev.quarkus.datasource.username=sa
