--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
 %dev.quarkus.datasource.username=sa
 %dev.quarkus.datasource.password=password
 %dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
+
+quarkus.swagger-ui.always-include=true
