--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
 %dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
 
 quarkus.swagger-ui.always-include=true
+quarkus.smallrye-metrics.micrometer.compatibility=true
