--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,20 @@
-quarkus.datasource.db-kind=h2
-quarkus.datasource.username=sa
-quarkus.datasource.password=password
-quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
+# kubernetes
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=${POSTGRES_USER}
+quarkus.datasource.password=${POSTGRES_PASSWORD}
+quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOST}:5432/${POSTGRES_DB}
 
 # dev
 %dev.quarkus.datasource.db-kind=h2
 %dev.quarkus.datasource.username=sa
 %dev.quarkus.datasource.password=password
 %dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
+
+# test
+%test.quarkus.datasource.db-kind=h2
+%test.quarkus.datasource.username=sa
+%test.quarkus.datasource.password=password
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
 
 quarkus.swagger-ui.always-include=true
 quarkus.smallrye-metrics.micrometer.compatibility=true
