Add quarkus configuration for kubernetes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOST}:5432/${POSTGRES_D
 
 quarkus.swagger-ui.always-include=true
 quarkus.smallrye-metrics.micrometer.compatibility=true
+
+# kubernetes configuration
+quarkus.kubernetes.labels.app-type=demo
+quarkus.kubernetes.annotations.app-type=demo
+quarkus.kubernetes.env.secrets=postgres-secret
+quarkus.kubernetes.env.configmaps=postgres-config
