Add registry configuration for Jib

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,9 @@ quarkus.kubernetes.labels.app-type=demo
 quarkus.kubernetes.annotations.app-type=demo
 quarkus.kubernetes.env.secrets=postgres-secret
 quarkus.kubernetes.env.configmaps=postgres-config
+
+quarkus.container-image.group=shinyay
+#quarkus.container-image.build=true
+#quarkus.container-image.push=true
+#quarkus.container-image.name=employee
+#quarkus.container-image.registry=gcr.io
