Modify container image build flug enabled

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ quarkus.kubernetes.env.secrets=postgres-secret
 quarkus.kubernetes.env.configmaps=postgres-config
 
 quarkus.container-image.group=shinyay
-#quarkus.container-image.build=true
+quarkus.container-image.build=true
 #quarkus.container-image.push=true
 #quarkus.container-image.name=employee
 #quarkus.container-image.registry=gcr.io
