--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,6 @@ quarkus.kubernetes.env.configmaps=postgres-config
 
 quarkus.container-image.group=shinyay
 quarkus.container-image.build=true
-#quarkus.container-image.push=true
+quarkus.container-image.push=true
 #quarkus.container-image.name=employee
 #quarkus.container-image.registry=gcr.io
