--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,5 +28,5 @@ quarkus.kubernetes.env.configmaps=postgres-config
 quarkus.container-image.group=shinyay
 quarkus.container-image.build=true
 quarkus.container-image.push=true
-#quarkus.container-image.name=employee
+quarkus.container-image.name=employee-app
 #quarkus.container-image.registry=gcr.io
