Add registry configuration to GCR

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,8 +25,8 @@ quarkus.kubernetes.annotations.app-type=demo
 quarkus.kubernetes.env.secrets=postgres-secret
 quarkus.kubernetes.env.configmaps=postgres-config
 
-quarkus.container-image.group=shinyay
+quarkus.container-image.group=${GOOGLE_PROJECT}
 quarkus.container-image.build=true
 quarkus.container-image.push=true
-quarkus.container-image.name=employee-app
-#quarkus.container-image.registry=gcr.io
+#quarkus.container-image.name=employee-app
+quarkus.container-image.registry=gcr.io
