--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://${POSTGRES_HOST}:5432/${POSTGRES_D
 %test.quarkus.datasource.password=password
 %test.quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
 
+quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.swagger-ui.always-include=true
 quarkus.smallrye-metrics.micrometer.compatibility=true
 
